--- a/source/css/_objects.globalClasses.scss
+++ b/source/css/_objects.globalClasses.scss
@@ -6,6 +6,7 @@
 }
 
 .fixed-bg{
+	// min-height: calc(100% - 103px);
 	min-height: 100%;
 	background-size: cover;
 	background-attachment: fixed;
@@ -138,21 +139,3 @@
 		height: 0px;
 	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
