--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -7,10 +7,11 @@
 
 @include module("nav") {
 	background-color: $mainGrey;
+	// border-top: 1px solid grey;
 	width: 100%;
 	z-index: 2;
 	height: 100px;
-	box-shadow: 0 2px 3px rgba(0,0,0,.4);
+	box-shadow: 2px 2px 3px rgba(0,0,0,.4);
 
 	.burger{
 		display: none;
@@ -139,11 +140,3 @@
 		}
 	}
 }
-
-
-
-
-
-
-
-
