--- a/source/css/module/contact.scss
+++ b/source/css/module/contact.scss
@@ -5,7 +5,7 @@
  */
 
 
-@include module("contact") { 
+@include module("contact") {
   	.contactPanel{
   		background-color: $mainGrey;
   		padding: 100px 0;
@@ -19,36 +19,27 @@
 
 	  	.contactPanel--container{
 			width: 80%;
+            max-width: 1000px;
 			margin: 0 auto;
 			padding-top: 60px;
-			text-align: center;
+			// text-align: center;
 
 			h3{
 				padding-bottom: 50px;
 			}
 
 
-		  	.contactPanel--container__left{
-				display: inline-block;
-				width: 40%;
-				vertical-align: top;
-				text-align: center;
-				padding-left:20px;
 
-				p{
-					padding-top:10px;
-				}
-
-	  		}
-
-	  		.contactPanel--container__right{
-	  			display: inline-block;
-	  			width: 40%;
-	  			padding-left:20px;
+	  		.contactPanel--container__left{
+                display: inline-block;
+                width: 50%;
+                padding-left: 0px;
+                margin-right: 190px;
 
 	  			h3{
 	  				text-align: left;
 	  			}
+
 
 				input, textarea{
 					display: block;
@@ -95,6 +86,18 @@
 					}
 				}
 	  		}
+
+          	.contactPanel--container__right{
+				display: inline-block;
+				width: 30%;
+				vertical-align: top;
+				text-align: center;
+
+				p{
+					padding-top:10px;
+				}
+
+	  		}
 	  	}
   	}
 
@@ -106,7 +109,7 @@
   			.contactPanel--container{
   					padding-top: 0px;
 
-				.contactPanel--container__left{
+				.contactPanel--container__right{
   					padding-top: 50px;
   					padding-left: 0;
 					display: block;
@@ -120,7 +123,7 @@
 					}
 				}
 
-				.contactPanel--container__right{
+				.contactPanel--container__left{
 					padding-left: 0;
 					padding-top: 20px;
 					display: block;
