--- a/source/css/module/gallery.scss
+++ b/source/css/module/gallery.scss
@@ -13,10 +13,72 @@
 
 
 		.images{
-			height: 300px;
-			width: 300px;
 			display: inline-block;
-			margin: 10px;
+			padding: 10px;
+
+			&.image0{
+				width: 36.5%;
+				float: left;
+			}
+
+
+			&.image1{
+				width: 32%;
+				vertical-align: top;
+			}
+			&.image2{
+				width: 32%;
+				vertical-align: top;
+				float: right;
+
+			}
+			&.image3{
+				width: 62%;
+				vertical-align: top;
+				float: right;
+
+			}
+			&.image4{
+				width: 33%;
+
+			}
+			&.image5{
+				width: 33%;
+				vertical-align: top;
+				// float: left;
+			}
+			&.image6{
+				width: 33%;
+				vertical-align: top;
+			}
+			&.image7{
+				width: 50%;
+				vertical-align: top;
+			}
+			&.image8{
+				width: 50%;
+				vertical-align: top;
+			}
+
+
+
+			.images__img{
+				background-color: black;
+				background-image: url('../img/magnifyingGlass.png');
+				background-repeat: no-repeat;
+				background-size: 35px 27px;
+				background-position: 47% center;
+
+				img{
+					width: 100%;
+					height: auto;
+
+					&:hover{
+						opacity: 0.4;
+					}
+				}
+			}
+
 		}
 
 		.slider, .cross{
@@ -24,8 +86,13 @@
 		}
 	}
 
+
+
+
+
+
 	.background{
-    	background-color: rgba(0,0,0,0.8);
+    	background-color: rgba(0,0,0,0.9);
 		position: fixed;
 		display: table;
     	top: 0%;
@@ -67,58 +134,76 @@
 		}
 
 
-		li{
-
-			&.activeImage{
-				margin-top: 10%;
-				width: 100%;
-				height: 100%;
-				text-align: center;
-				z-index: 1002;
-				// display: table-cell;
-				// vertical-align: middle;
-
-				.mosiac--element{
-					height: 80%;
-					width: auto;
-
-					img{
-						&:hover{
-							opacity: 1;
-						}
-					}
-				}
-			}
-		}
-
-
-			// .mosiac--element{
-			// 	margin-left:30px;
-			// 	height: 200px;
-			// 	width: 200px;
-			// 	background-color: black;
-			// 	background-image: url('../img/magnifyingGlass.png');
-			// 	background-repeat: no-repeat;
-			// 	background-size: 35px 27px;
-			// 	background-position: 47% center;
-			// 	display: inline-block;
-			//
-			// 	img{
-			// 		height: 100%;
-			// 		width: 100%;
-			// 		&:hover{
-			// 			opacity: 0.5;
-			// 		}
-			// 	}
-			// }
-
-
-
-
-
-
+		.activeImage{
+			width: 100%;
+			height: 100%;
+			text-align: center;
+			z-index: 1002;
+			display: table-cell;
+			vertical-align: middle;
 		}
 	}
+}
+
+// .images{
+// 	display: inline-block;
+// 	padding: 10px;
+// 	height: 100%;
+// 	// position: absolute;
+//
+// 	&.image0{
+// 		position: absolute;
+// 		width: 32%;
+// 	}
+// 	&.image1{
+// 		width: 32%;
+// 		vertical-align: top;
+// 		position: absolute;
+// 		left: 32%;
+// 	}
+// 	&.image2{
+// 		width: 33%;
+// 		vertical-align: top;
+// 		position: absolute;
+// 		right: 0;
+// 	}
+// 	&.image3{
+// 		width: 66%;
+// 		vertical-align: top;
+// 		align: right;
+// 		position: absolute;
+// 		right: 10px;
+// 		top: 250px;
+// 		padding: 0;
+// 	}
+// 	&.image4{
+// 		width: 35%;
+// 		position: absolute;
+// 		left: 0;
+// 		top: 70%;
+// 	}
+// 	&.image5{
+// 		width: 32%;
+// 		position: absolute;
+// 		left: 30%;
+// 	}
+// 	&.image6{
+// 		width: 33%;
+// 		vertical-align: top;
+// 		position: absolute;
+// 		right: 0;
+// 		top: 400px;
+// 	}
+// 	&.image7{
+// 		width: 50%;
+// 		vertical-align: top;
+// 	}
+// 	&.image8{
+// 		width: 50%;
+// 		vertical-align: top;
+// 	}
+//
+
 
 
 
