--- a/source/css/module/localArea.scss
+++ b/source/css/module/localArea.scss
@@ -170,13 +170,14 @@
 
 	  		.content--second{
 	  			width: 80%;
+				max-width: 1000px;
 	  			margin: 0 auto;
 
 	  			.content--second__block{
 	  				vertical-align: top;
 	  				display: inline-block;
 	  				width: 30%;
-	  				padding: 40px 20px;
+	  				padding: 40px 0px;
 
 	  				p{
 	  					line-height: 25px;
@@ -213,6 +214,7 @@
 						width: 100%;
 						padding-right: 0px;
 						text-align: justify;
+						flex: none;
 
 						.no-padding{
 							padding-bottom:20px !important;
@@ -222,8 +224,11 @@
 					.content--main__img{
 						display: block;
 						flex: 0;
+						-webkit-flex: none;
+	    				-ms-flex:  none;
+	    				flex:    none;
 						margin: 0 auto;
-						width: 30%;
+						width: 100%;
 					}
 
 				}
@@ -275,11 +280,13 @@
 						width: 100%;
 						padding-right: 0px;
 						text-align: justify;
+						flex: auto;
 					}
 
 					.content--main__img{
 						display: block;
 						margin: 0 auto;
+						flex: auto;
 					}
 
 				}
