--- a/source/css/module/nav.scss
+++ b/source/css/module/nav.scss
@@ -23,6 +23,10 @@
 		max-width: 1100px;
 		margin: 0 auto;
 
+		@media screen and (max-width:900px){
+			width: 100%;
+		}
+
 		li{
 			display: inline-block;
 			width: 10%;
